 * client Changes
  * permit to force init of session by using init()
  * catch Exception on logout
 
 * adds
  * 

 * libraries Changes
  * RAS