@@ -1,6 +1,7 @@
  * client Changes
   * permit to force init of session by using init()
   * catch Exception on logout
+  * take in account relative store path for create session from path in OpenM_SSOClientSessionManager.getFromFile
  
  * adds
   * 
